Fix overflow titles for smaller screens

--- a/src/styles/program.css
+++ b/src/styles/program.css
@@ -84,6 +84,7 @@ details summary {
 
 .schedule-stage-title > h3 {
   font-weight: 900;
+  width: 80%;
 }
 
 .schedule-stage-title {
